hive-macro/tests/macro/hive/should_fail/attribute_syntax.rs
#[hive_macro::hive(; = 1)]
mod tests {}

fn main() {}
